# corrosion

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  RELEASES.md  azure-pipelines.yml
.github/actions/setup_test/: action.yaml
.github/scripts/: determine_compiler.sh
.github/scripts/toolchains/: aarch64-apple-darwin-clang.cmake  x86_64-pc-windows-gnu-clang.cmake
.github/workflows/: build_legacy_generator.yaml  gh-pages.yaml  linux.yaml  test.yaml  test_legacy.yaml  visual_studio.yaml
cmake/: Cargo.cmake  Corrosion.cmake  CorrosionConfig.cmake.in  CorrosionGenerator.cmake  CorrosionInvokeRustc.cmake  FindCargo.cmake  FindRust.cmake  xcode_cargo_wrapper.sh.in
cmake/cmds/: cargo_build.cmd.in  cargo_build.sh.in
doc/: book.toml
doc/src/: SUMMARY.md  advanced.md  common_issues.md  ffi_bindings.md  introduction.md  quick_start.md  setup_corrosion.md  usage.md
doc/src/faq/: README.md
generator/: CMakeLists.txt  Cargo.toml
generator/src/: build_crate.rs  main.rs  target.rs
generator/src/subcommands/: build_crate.rs  gen_cmake.rs  print_root.rs
generator/src/subcommands/gen_cmake/: platform.rs  target.rs
integrator/: Cargo.toml
integrator/src/: lib.rs
src/: main.rs  platform.rs  target.rs
test/: CMakeLists.txt  ConfigureAndBuild.cmake  README.md
test/cargo_clean/: CMakeLists.txt  README.md  Verify.cmake
test/cargo_clean/cargo_clean/: CMakeLists.txt  Cargo.toml
test/cargo_clean/cargo_clean/src/: lib.rs
test/cargo_config_discovery/: CMakeLists.txt  README.md
test/cargo_config_discovery/cargo_config_discovery/: Cargo.toml
test/cargo_config_discovery/cargo_config_discovery/.cargo/: config.toml
test/cargo_config_discovery/cargo_config_discovery/src/: lib.rs
test/cargo_flags/: CMakeLists.txt  main.cpp
test/cargo_flags/rust/: Cargo.toml
test/cargo_flags/rust/src/: lib.rs
test/cbindgen/: CMakeLists.txt  main.cpp
test/cbindgen/non_existent_target/: CMakeLists.txt
test/cbindgen/rust/: Cargo.toml  build.rs  cbindgen.toml
test/cbindgen/rust2cpp/: CMakeLists.txt
test/cbindgen/via_metadata/: CMakeLists.txt  main.cpp
test/cbindgen/via_metadata/rust/: Cargo.toml  cbindgen-2.toml
test/config/: CMakeLists.txt  RunTest.cmake
test/config/ExternalCorrosionGenerator/: CMakeLists.txt  Test.cmake
test/config/FindRust/: CMakeLists.txt  Test.cmake
test/config/ParseTargetTriple/: CMakeLists.txt
test/config_discovery/: CMakeLists.txt
test/config_discovery/config_discovery/: CMakeLists.txt  Cargo.toml
test/config_discovery/config_discovery/.cargo/: config.toml
test/config_discovery/config_discovery/src/: main.rs
test/corrosion_install/: CMakeLists.txt
test/corrosion_install/install_lib/rust_lib/: CMakeLists.txt
test/cpp2rust/: CMakeLists.txt  lib.cpp  lib2.cpp
test/cpp2rust/path with space/: lib3.cpp
test/cpp2rust/rust/: Cargo.toml  build.rs
test/cpp2rust/rust/src/: main.rs
test/crubit/: CMakeLists.txt  main.cpp
test/crubit/rust_lib/: Cargo.toml
test/crubit/rust_lib/src/: lib.rs
test/custom_profiles/: CMakeLists.txt
test/custom_target/: CMakeLists.txt
test/custom_target/custom_target/: CMakeLists.txt
test/custom_target/custom_target/rust/: Cargo.toml  build.rs  c_lib.c
test/custom_target/custom_target/rust/src/: bin.rs  lib.rs
test/cxxbridge/: CMakeLists.txt
test/cxxbridge/cxxbridge/: CMakeLists.txt  main.cpp
test/cxxbridge/cxxbridge/rust/src/: lib.rs
test/cxxbridge/cxxbridge/rust/src/foo/: mod.rs
test/cxxbridge/cxxbridge_circular/: CMakeLists.txt
test/cxxbridge/cxxbridge_cpp2rust/: CMakeLists.txt
test/cxxbridge/cxxbridge_exported_impls/: CMakeLists.txt  main.cpp
test/cxxbridge/cxxbridge_exported_impls/rust/src/: bridge_a.rs  bridge_b.rs  lib.rs
test/cxxbridge/cxxbridge_rust2cpp/: CMakeLists.txt
test/envvar/: CMakeLists.txt  build.rs
test/features/: CMakeLists.txt  main.cpp
test/features/rust/: Cargo.toml
test/features/rust/src/: lib.rs
test/gensource/: CMakeLists.txt
test/gensource/gensource/: CMakeLists.txt
test/gensource/gensource/generator/: CMakeLists.txt
test/gensource/srcgen/: CMakeLists.txt
test/hostbuild/: CMakeLists.txt  Cargo.toml
test/hostbuild/src/: main.rs
test/multitarget/: CMakeLists.txt  lib.cpp
test/multitarget/multitarget/: Cargo.toml
test/native-static-libs/: CMakeLists.txt  Cargo.toml
test/native-static-libs/native-static-libs/: CMakeLists.txt  Cargo.toml
test/nostd/: CMakeLists.txt  main.cpp
test/nostd/rust/: Cargo.toml
test/nostd/rust/src/: lib.rs
test/one_package_bin_and_lib/: CMakeLists.txt
test/one_package_bin_and_lib/one_package_bin_and_lib/: CMakeLists.txt  Cargo.toml
test/one_package_bin_and_lib/one_package_bin_and_lib/src/: lib.rs  main.rs
test/output directory/: CMakeLists.txt
test/output directory/output directory/: CMakeLists.txt  Cargo.toml
test/output directory/output_directory_config/: CMakeLists.txt  consumer.cpp
test/rust/: Cargo.toml
test/rust2cpp/: CMakeLists.txt  main.cpp
test/rust2cpp/rust/: CMakeLists.txt  Cargo.toml
test/rust2cpp/rust/src/: demo.h  lib.rs
test/rust2cpp/rust2cpp/: CMakeLists.txt
test/rustflags/: CMakeLists.txt  main.cpp
test/rustflags/rust/: Cargo.toml
test/rustflags/rust/src/: lib.rs
test/rustloc/: CMakeLists.txt  Cargo.toml
test/workspace/: CMakeLists.txt
test/workspace/member1/: Cargo.toml
test/workspace/member2/: Cargo.toml
test/workspace/member3/: Cargo.toml
test/workspace/workspace/: CMakeLists.txt
