[package]
name = "corrosion-generator"
version = "0.1.0"
authors = ["Andrew Gaspar <andrew.gaspar@outlook.com>"]
license = "MIT"
edition = "2018"

[dependencies]
cargo_metadata = "0.15"
# See https://github.com/serde-rs/serde/issues/2538#issuecomment-1684517372 for why we pin serde
serde = { version = "1, < 1.0.172", features = ["derive"] }

[dependencies.clap]
version = "2.34"
default-features = false
# Make sure this crate still compiles while it is checked out
# in a sub-directory of a repository that has a Cargo.toml.
[workspace]
